Convert GN group targets to Visual Studio projects

BUG=596895

Review URL: https://codereview.chromium.org/1819353002

Cr-Commit-Position: refs/heads/master@{#383042}

Former-commit-id: 130612c0259b1200a8edf41973b058d5164470ef